tests/rascal/negative/type_errors/L1/12_expression_ES10_D4_78.ob
MODULE Test12;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := 0;
  (* error *)  p := ((((r + z) DIV 1223) DIV (x DIV (+ 200))) <= y);
               x := (((1 DIV z) - 0) + 2);
               p := ((+ (y DIV (z + x))) <= (x * x));
               r := (z # (+ ((y - 2) DIV 1)));
               q := (q & ((1223 + 1) <= (+ 1223)));
               p := (1 <= 0);
               r := ((((y > 1) OR (200 <= 1223)) & (y <= 200)) & p);
               y := 1223;
               r := (0 > z)
END Test12.